--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "current": "./dateTask.js",
     "add": "./addDate.js",
-    "sub": "./subDate.js"
+    "sub": "./subDate.js",
+    "guess": "./guessNumber.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
